[gd_scene load_steps=11 format=2]

[ext_resource path="res://core/game/GameScene.gd" type="Script" id=1]
[ext_resource path="res://data/white.png" type="Texture" id=2]
[ext_resource path="res://core/game/GUI.gd" type="Script" id=3]
[ext_resource path="res://core/game/GameCommands.gd" type="Script" id=4]
[ext_resource path="res://core/game/LogLabel.gd" type="Script" id=5]
[ext_resource path="res://core/game/GameCreator.gd" type="Script" id=6]
[ext_resource path="res://core/game/PlayerManager.gd" type="Script" id=7]
[ext_resource path="res://core/game/PlayerPause.gd" type="Script" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float brightness = 0.36;

void fragment() {
	vec3 c = textureLod(SCREEN_TEXTURE,SCREEN_UV, 0.0).rgb;
	float v = dot( c, vec3(brightness, brightness, brightness) );
	COLOR.rgb= vec4(1.0, 1.0, 1.0, 1.0).rgb*v;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/brightness = 0.36

[node name="GameScene" type="Node"]
script = ExtResource( 1 )

[node name="GameWorldView" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -120.0
margin_bottom = -75.0
stretch = true
__meta__ = {
"_edit_lock_": true
}

[node name="GrayFilter" type="TextureRect" parent="GameWorldView"]
visible = false
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="Viewport" type="Viewport" parent="GameWorldView"]
size = Vector2( 648, 525 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="GameWorldView/Viewport"]
anchor_mode = 0
current = true
zoom = Vector2( 0.6, 0.6 )

[node name="GUI" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 20
script = ExtResource( 3 )

[node name="Commands" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BottomPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -75.0
margin_right = -120.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="LogLabel" type="Label" parent="BottomPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
script = ExtResource( 5 )

[node name="ReferenceRect" type="ReferenceRect" parent="BottomPanel/LogLabel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RightPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Label" type="Label" parent="RightPanel"]
anchor_right = 1.0
anchor_bottom = 0.5
text = "
` - console
F4 - debug window
P - pause"
valign = 2

[node name="ReferenceRect" type="ReferenceRect" parent="RightPanel/Label"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameCreator" type="Node" parent="."]
script = ExtResource( 6 )

[node name="PlayerManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="PlayerPause" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PlayerPause"]
modulate = Color( 0.172549, 0.113725, 0.223529, 0.352941 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CanvasLayer/PlayerPause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.5
margin_top = -15.5
margin_right = 25.5
margin_bottom = 15.5
text = "PAUSED
"

